[package]
name = "rbd-2d"
version = "0.1.0"
edition = "2021"
description = "physics simulations with functions"
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/bwaklog/physics-Rust/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
